processor/src/test/resources/validationExamples/bad/resource property method is static.java
// This file is compiled only in test.
package x;

import com.inrupt.rdf.wrapping.annotation.Property;
import com.inrupt.rdf.wrapping.annotation.Resource;

@Resource
interface X {
    @Property("x")
    default Object x() {
        return null;
    }
}
